real bind mount project added

--- a/proj_with_db_bind_mount_poetry/Dockerfile
+++ b/proj_with_db_bind_mount_poetry/Dockerfile
@@ -1,19 +1,18 @@
-FROM tiangolo/uvicorn-gunicorn:python3.11-slim AS builder
+FROM tiangolo/uvicorn-gunicorn-fastapi:python3.9-slim AS builder
 
 LABEL "Project"="sample"
 LABEL "Organisation"="ANORA"
 
 # Set the working directory
-WORKDIR /mock_mod
+WORKDIR /app
 
 # Copy the poetry.lock and pyproject.toml files
-COPY pyproject.toml poetry.lock /mock_mod/
+COPY pyproject.toml poetry.lock /app/
 
 # Install dependencies using Poetry
 RUN pip install poetry && \
     poetry config virtualenvs.create false && \
-    poetry lock && \
     poetry install --no-interaction --no-ansi
 
 # Copy the FastAPI project files
-COPY ./mock_mod /mock_mod
+COPY ./app /app/
