--- a/Docker_Full_Project/.env.broad
+++ b/Docker_Full_Project/.env.broad
@@ -1,4 +1,4 @@
-APP_NAME="Validation Studio Cloud"
+APP_NAME="Project Cloud"
 HOST="0.0.0.0"
 PORT=8000
 DB_URL="mongodb+srv://doadmin:O85q437nRt9MSm26@vs-mongodb-001-c4099f9a.mongo.ondigitalocean.com/admin?tls=true&authSource=admin&replicaSet=vs-mongodb-001"
