--- a/Docker_Full_Project/.env.local
+++ b/Docker_Full_Project/.env.local
@@ -1,8 +1,8 @@
-APP_NAME="Validation Studio test"
+APP_NAME="Project local"
 HOST="127.0.0.1"
-PORT=3000
+PORT=8000
 DB_URL="mongodb://127.0.0.1:27017/?uuidRepresentation=standard"
-DB_NAME="test_db"
+DB_NAME="validation_studio"
 RELOAD=False
 DRIVER_PATH=uploads/drivers
 DATA_TRANSFORM_PATH=uploads/data_transforms
