--- a/Docker_Full_Project/pyproject.toml
+++ b/Docker_Full_Project/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
-name = "validation_studio_cloud"
+name = ""
 version = "0.1.0"
 description = ""
-authors = ["rahul-george <rahulgeorge@anoralabs.com>"]
+authors = [""]
 
 [tool.poetry.dependencies]
 python = "^3.11"
