--- a/Docker_Full_Project/compose.yml
+++ b/Docker_Full_Project/compose.yml
@@ -1,4 +1,15 @@
 services:
+    db:
+    image: mongo
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=admin
+      - MONGO_INITDB_ROOT_PASSWORD=Nashid007
+    ports:
+      - '27017:27017'
+    container_name: mongoDB
+    volumes:
+      - mongodb_data:/data/db
+
   fastapi:
     build:
       context: .
@@ -9,8 +20,10 @@ services:
     ports:
       - '9000:8000'
     volumes:
-    # The driver_path and data_transfrom_path should be absolute path starting from ValidartionStudioCloud)
+    # For bind mounting, the path should be absolute path
       - /root/Docker_Full_Project/Project/${DRIVER_PATH}:/app/Project/${DRIVER_PATH}
       - /root/Docker_Full_Project/Project/${DATA_TRANSFORM_PATH}:/app/Project${DATA_TRANSFORM_PATH}
-
     restart: "no"
+
+volumes:
+  mongodb_data:
