--- a/Docker_Full_Project/.env.broad
+++ b/Docker_Full_Project/.env.broad
@@ -1,8 +1,8 @@
 APP_NAME="Project Cloud"
 HOST="0.0.0.0"
 PORT=8000
-DB_URL="mongodb+srv://doadmin:O85q437nRt9MSm26@vs-mongodb-001-c4099f9a.mongo.ondigitalocean.com/admin?tls=true&authSource=admin&replicaSet=vs-mongodb-001"
-DB_NAME="validation_studio"
+DB_URL="mongodb://admin:Nashid007@mongoDB:27017/"
+DB_NAME="demo_db"
 RELOAD=False
 DRIVER_PATH=uploads/drivers
 DATA_TRANSFORM_PATH=uploads/data_transforms
