--- a/Docker_Full_Project/.env.local
+++ b/Docker_Full_Project/.env.local
@@ -2,7 +2,7 @@ APP_NAME="Project local"
 HOST="127.0.0.1"
 PORT=8000
 DB_URL="mongodb://127.0.0.1:27017/?uuidRepresentation=standard"
-DB_NAME="validation_studio"
+DB_NAME="local_db"
 RELOAD=False
 DRIVER_PATH=uploads/drivers
 DATA_TRANSFORM_PATH=uploads/data_transforms
